# arduino-logger

./: .gitignore  .gitmodules  AVRCircularBufferLogger.h  ArduinoLogger.cpp  ArduinoLogger.h  CircularBufferLogger.h  Makefile  README.md  _log_common_defs.h  library.properties  meson.build
doc/adr/: 0001-record-architecture-decisions.md  0002-interrupt-logging-strategy.md  0003-supporting-error-level-per-module.md
doc/development/: 20210415 - Development Log
examples/: platform_logger.h
examples/AVRCircularLogBuffer/: AVRCircularLogBuffer.ino  platform_logger.h
examples/AVRSDRotationalLogger/: AVRSDRotationalLogger.ino
examples/CircularLogBuffer/: CircularLogBuffer.ino  platform_logger.h
examples/CircularLogBuffer_CompileTimeFiltering/: CircularLogBuffer_CompileTimeFiltering.ino  platform_logger.h
examples/CircularLogBuffer_GlobalInst/: CircularLogBuffer_GlobalInst.ino  platform_logger.h
examples/CircularLogBuffer_LocalInst/: CircularLogBuffer_LocalInst.ino
examples/TeensyRobustModuleLogger/: TeensyRobustModuleLogger.ino
examples/TeensySDLogger/: TeensySDLogger.ino
examples/TeensySDRotationalLogger/: TeensySDRotationalLogger.ino
examples/TeensySDRotationalLoggerModules/: TeensySDRotationalLoggerModules.ino
internal/: Queue.h
src/: AVRCircularBufferLogger.h  AVRSDRotationalLogger.h  ArduinoLogger.cpp  ArduinoLogger.h  CircularBufferLogger.h  SDFileLogger.h  TeensyRobustModuleLogger.h  TeensySDLogger.h  TeensySDRotationalLogger.h  TeensySDRotationalModuleLogger.h
src/internal/: Queue.h  circular_buffer.hpp  lambda.h  ring_span.hpp
subprojects/: arduino-printf.wrap
test/: AVRCircularBufferLoggerTests.cpp  ArduinoLoggerTests.cpp  CircularBufferLoggerTests.cpp  CoreLoggerTests.cpp  catch_main.cpp  printf.c  printf.h  test_helper.cpp  test_helper.hpp
test/sketch/: AVRCircularLogBuffer.cpp  AVRSDRotationalLogger.cpp  Adafruit_SleepyDog.cpp  Adafruit_SleepyDog.h  CircularLogBuffer.cpp  CircularLogBuffer_CompileTimeFiltering.cpp  CircularLogBuffer_GlobalInst.cpp  CircularLogBuffer_LocalInst.cpp  SDFileLogger_Teensy.cpp  SdFat.h  TeensySDLogger.cpp  TeensySDRotationalLogger.cpp
tools/: CI.jenkinsfile  Jenkinsfile
